syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "example";

service BookService {
    rpc Create ( CreateRequest ) returns ( Book ) {}
    rpc FindAll ( google.protobuf.Empty ) returns ( Books ) {}
    rpc Delete ( DeleteRequest ) returns ( google.protobuf.Empty ) {}
}

message CreateRequest {
    string title = 1;
    string author = 2;
}

message DeleteRequest {
    int64 id = 1;
}

message Book {
    int64 id = 1;
    string title = 2;
    string author = 3;
}

message Books {
    repeated Book books = 1;
}